# RCI_ros2_lecture

lecture_12/Lecture 12. Source Code/pantilt_action_tutorials_interfaces/: CMakeLists.txt  README.md  package.xml
lecture_12/Lecture 12. Source Code/pantilt_action_tutorials_interfaces/action/: PantiltAction.action
lecture_12/Lecture 12. Source Code/pantilt_action_tutorials_py/: CMakeLists.txt  package.xml  setup.cfg  setup.py
lecture_12/Lecture 12. Source Code/pantilt_action_tutorials_py/launch/: pantilt_action_client.launch.py  pantilt_action_client_arguments.launch.py  pantilt_action_server.launch.py  pantilt_action_server_arguments.launch.py
lecture_12/Lecture 12. Source Code/pantilt_action_tutorials_py/pantilt_action_tutorials_py/: pantilt_action_client.py  pantilt_action_server.py
lecture_12/Lecture 12. Source Code/pantilt_action_tutorials_py/rviz/: pan_tilt.rviz
lecture_12/Lecture 12. Source Code/ur_urdf/urdf/: ur.urdf.xacro  ur_new.urdf
lecture_12/Lecture 12. Source Code/urdf_tutorial/launch/: pantilt_urdf_visualization.launch.py
lecture_13/Lecture 13. Source Codes/aruco_box/: model.config  model.sdf
lecture_13/Lecture 13. Source Codes/opencv_tutorial/: package.xml  setup.py
lecture_13/Lecture 13. Source Codes/opencv_tutorial/launch/: opencv_launch.py
lecture_13/Lecture 13. Source Codes/opencv_tutorial/opencv_tutorial/: aruco_tf_node.py  generate_aruco.py  gpt_node.py  opencv_tutorial.py  opencv_tutorial2.py  test.py  test_gpt.py
lecture_5/Lecture 5. Source code/hello_ros_cpp/: CMakeLists.txt
lecture_5/Lecture 5. Source code/hello_ros_py/: package.xml  setup.cfg  setup.py
lecture_5/src/hello_ros_cpp/: CMakeLists.txt  package.xml
lecture_5/src/hello_ros_cpp/src/: practice2.cpp  practice3.cpp
lecture_6/Lecture6. Source code/: package.xml  setup.cfg  setup.py
lecture_6/Lecture6. Source code/topic_tutorial_py/: direction.py  pubvel.py  subpose.py
lecture_6/src/topic_tutorial_cpp/: CMakeLists.txt  package.xml
lecture_7/Lecture 7. Source Code/launch_tutorial/: package.xml  setup.py
lecture_7/src/launch_tutorial_cpp/: CMakeLists.txt  package.xml
lecture_7/src/launch_tutorial_cpp/launch/: namespace.launch.py  random_velocity.launch.py  randvelturtlesim.launch.py  reverse.launch.py  turtleflag.launch.py
lecture_7/src/launch_tutorial_cpp/src/: random_velocity_node.cpp  reverse_node.cpp
lecture_8/Lecture 8. Source Code/: package.xml  setup.cfg  setup.py
lecture_8/Lecture 8. Source Code/service_tutorial_py/: turtle_spawn.py  velocity_toggle.py
lecture_9/Lecture 9. Source Code/action_tutorial_py/: package.xml  setup.cfg  setup.py
(+21 files in other folders)
