cmake_minimum_required(VERSION 3.8)
project(hello_ros_cpp)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

add_executable(hello_world_node src/practice2.cpp)
add_executable(logging_node src/practice3.cpp)

ament_target_dependencies(hello_world_node rclcpp)
ament_target_dependencies(logging_node rclcpp)

install(TARGETS
  hello_world_node
  logging_node
  DESTINATION lib/hello_ros_cpp)

ament_package()
